add word generator submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,9 @@
 [submodule "4ms-XOXDrums"]
 	path = 4ms-XOXDrums
 	url = https://github.com/4ms/XOXDrums
+[submodule "word-generator"]
+	path = EucQuant/word-generator
+	url = https://github.com/sindarknave/word-generator
+[submodule "word-generator1"]
+	path = WordGenerator/word-generator
+	url = git@github.com:sindarknave/word-generator
