--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -26,6 +26,7 @@ on:
           - RebelTech
           - Venom
           - kocmoc
+          - WordGenerator
           - "./"
       do_release:
         description: 'Create Release (must also tag!)'
