Add Impromptu to CI and root cmake

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -21,6 +21,7 @@ on:
           - Frequency-Domain
           - Fundamental
           - Geodesics
+          - ImpromptuModular
           - NANOModules
           - OrangeLine
           - RebelTech
