--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(PLUGINS
     FrozenWasteland
     Fundamental
     Geodesics
+    ImpromptuModular
     kocmoc
     NANOModules
     OrangeLine
