--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -113,7 +113,7 @@ jobs:
 
 
       - name: Release
-        if: ${{ startsWith(github.ref, 'refs/tags/') && inputs.do_release }}
+        if: startsWith(github.ref, 'refs/tags/') && inputs.do_release
         uses: softprops/action-gh-release@v2
         with:
           name: "Release: ${{ env.CI_REF_NAME }}"
