--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -53,8 +53,8 @@ jobs:
   build-lin:
     if: ${{ github.event_name == 'push' || inputs.linux_x64 }}
     strategy:
-        matrix:
-          gcc: ['12.3.Rel1'] 
+      matrix:
+        gcc: ['12.3.Rel1']
     name: "Build firmware on linux"
     runs-on: ubuntu-24.04
     steps:
@@ -112,7 +112,7 @@ jobs:
 
 
       - name: Release
-        if: startsWith(github.ref, 'refs/tags/') && ${{ inputs.do_release }}
+        if: ${{ startsWith(github.ref, 'refs/tags/') && inputs.do_release }}
         uses: softprops/action-gh-release@v2
         with:
           name: "Release: ${{ env.CI_REF_NAME }}"
@@ -159,8 +159,8 @@ jobs:
   build-mac-x64:
     if: ${{ github.event_name == 'push' || inputs.macos }}
     strategy:
-        matrix:
-          gcc: ['12.3.Rel1']  # can add other versions if needed
+      matrix:
+        gcc: ['12.3.Rel1']  # can add other versions if needed
     name: "Build firmware on mac x64"
     runs-on: macos-latest
     steps:
